Source Code link right spacing fixed
That's what I get for taking example code from the web.

--- a/diaspora.css
+++ b/diaspora.css
@@ -51,15 +51,15 @@ input {
 }
 
 #footer {
-	background:#color code none repeat scroll 0 0;
-	bottom:0;
-	display:block;
-	height:30 px;
-	left:0;
-	position:fixed;
-	text-align:right;
-	width:100%;
-	z-index:999;
+	background: #color code none repeat scroll 0 0;
+	bottom: 0;
+	display: block;
+	height: 30 px;
+	right: 5px;
+	position: fixed;
+	text-align: right;
+	width: 100%;
+	z-index: 999;
 	padding-bottom: 2px;
 }
 
